Atualizaçao criacao novas paginas

--- a/style.css
+++ b/style.css
@@ -90,8 +90,4 @@ ul li {
 }
 
 footer {
-    margin-top: 50px;
-    padding: 20px;
-    background: #007A33;
-    color: white;
-}
+    margin-top: 
