--- a/style.css
+++ b/style.css
@@ -90,4 +90,25 @@ ul li {
 }
 
 footer {
-    margin-top: 
+    margin-top: 50px;
+    padding: 20px;
+    background: #007A33;
+    color: white;
+}
+
+/* 🔹 Ícone de Cadastro no Canto Inferior Direito */
+#cadastro-icon {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: url('capoeira-icon.png') no-repeat center;
+    background-size: contain;
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+}
+
+/* 🔹 Cadastro e Login Inicialmente Ocultos */
+#cadastro, #login {
+    display: none;
+}
